# AiF-core

./: .dockerignore  .gitignore  README.md  build-frontend-custom.sh  build-frontend.sh  docker-compose.yml  docker.env.example
backend_py/: .env  .gitignore  Dockerfile  README.md  pyproject.toml
backend_py/src/: __main__.py
backend_py/src/app/: app_status.py  create_app.py
backend_py/src/app/api/accounts/: controllers.py  models.py  views.py
backend_py/src/app/api/api_tokens/: __init__.py  controllers.py  models.py  views.py
backend_py/src/app/api/audit/: controllers.py  models.py  views.py
backend_py/src/app/api/auth/: controllers.py  dependencies.py  jwt.py  middleware_dependencies.py  models.py  views.py
backend_py/src/app/api/counterparties/: controllers.py  models.py  views.py
backend_py/src/app/api/documents/: controllers.py  models.py  views.py
backend_py/src/app/api/info_cards/: controllers.py  models.py  views.py
backend_py/src/app/api/inventory_movements/: controllers.py  models.py  views.py
backend_py/src/app/api/item_categories/: controllers.py  models.py  views.py
backend_py/src/app/api/items/: controllers.py  models.py  views.py
backend_py/src/app/api/machine_stocks/: controllers.py  models.py  views.py
backend_py/src/app/api/machines/: controllers.py  models.py  views.py
backend_py/src/app/middleware/: audit.py  auth.py  temp_file_cleanup.py
backend_py/src/app/services/: file_storage.py  minio_storage.py  proxy_storage.py  scheduler.py  storage_base.py  storage_factory.py
backend_py/src/app/settings/: __init__.py  generated_settings.py  specific_settings.py
(+110 files in other folders)
